exports[`BpkTextarea should render correctly 1`] = `
<textarea
  className="bpk-textarea"
  id="test"
  name="test"
  value="" />
`;

exports[`BpkTextarea should render correctly with "className" attribute 1`] = `
<textarea
  className="bpk-textarea my-custom-class-1 my-custom-class-2"
  id="test"
  name="test"
  value="" />
`;
